--- a/templates/index.html
+++ b/templates/index.html
@@ -22,33 +22,30 @@
           
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-
-              <li class="nav-item">
-                <a class="navcol nav-link" aria-current="page" href="#">Home</a>
-              </li>
-
-              <li class="nav-item">
-                <a  class="navcol nav-link" href="#">Link</a>
-              </li>
-
-              <li class="nav-item dropdown">
-                <a  class="navcol nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Dropdown
-                </a>
-
-                <ul class="navcol dropdown-menu">
-                  <li><a class="navcol dropdown-item" href="#">Action</a></li>
-                  <li><a class="navcol dropdown-item" href="#">Another action</a></li>
-                  <li><hr class="navcol dropdown-divider"></li>
-                  <li><a class="navcol dropdown-item" href="#">Something else here</a></li>
-                </ul>
-
-              </li>
+            <div class="row">
+              <ul class="navbar-nav me-auto mb-5 mb-lg-0 ">
+                <div class="col mx-3">
+                  <li class="nav-item">
+                    <a class="navcol nav-link" aria-current="page" href="#">Home</a>
+                  </li>
+                </div>
+                <div class="col mx-3">
+                  <li class="nav-item">
+                    <a  class="navcol nav-link" href="#">History</a>
+                  </li>
+                </div>
+                <div class="col mx-3">
+                  <li class="nav-item">
+                    <a  class="navcol nav-link" href="{{ url_for('que') }}" role="button" aria-expanded="false">
+                      Que
+                    </a>
+                  </li>
+                </div>
               <!-- <li class="nav-item">
                 <a class="nav-link disabled">Disabled</a>
               </li> -->
             </ul>
+            </div>
             <!-- <form class="d-flex" role="search">
               <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
               <button class="btn btn-outline-success" type="submit">Search</button>
@@ -60,15 +57,20 @@
     <div id = "names" class = "container-fluid text-center mt-3 p-2">
 
       <div class="row">
+        
         <div class="container-sm col m-auto p-3">
-          <img class=" vid rounded mx-auto d-bloc m-5" src="{{ url_for('video') }}" width="50%"/>
+
+         <img class="vid rounded-3 mx-auto d-bloc m-5" src="{{ url_for('video') }}" width="50%"/>
+
+          <button class="button btn btn-outline-secondary"> Capture </button>
+          <br>
   
         </div>
 
 
         <div class="container-sm col m-auto p-2">
           <p> created <span style="color:cyan "> By </span> </p>
-          <img src="static/img/logo.png" width="50%"/>
+            <img class="rounded logo" src="static/img/logo.png" width="50%"/>
         </div>
      </div>
 
