--- a/templates/index.html
+++ b/templates/index.html
@@ -26,12 +26,12 @@
               <ul class="navbar-nav me-auto mb-5 mb-lg-0 ">
                 <div class="col mx-3">
                   <li class="nav-item">
-                    <a class="navcol nav-link" aria-current="page" href="#">Home</a>
+                    <a class="navcol nav-link" aria-current="page" href="{{url_for('home')}}">Home</a>
                   </li>
                 </div>
                 <div class="col mx-3">
                   <li class="nav-item">
-                    <a  class="navcol nav-link" href="#">History</a>
+                    <a  class="navcol nav-link" href="{{ url_for('history')}}">History</a>
                   </li>
                 </div>
                 <div class="col mx-3">
