--- a/templates/que.html
+++ b/templates/que.html
@@ -12,6 +12,47 @@
 </head>
 
 <body>
+    <nav class="navbar navbar-expand-lg">
+
+        <div class="container-fluid">
+          <!-- <a class="navbar-brand" href="#"> <img src="static/img/logo2.png" width="20%" class=""/></a> -->
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+
+            <div class="row">
+              <ul class="navbar-nav me-auto mb-5 mb-lg-0 ">
+                <div class="col mx-3">
+                  <li class="nav-item">
+                    <a class="navcol nav-link" aria-current="page" href="{{url_for('home')}}">Home</a>
+                  </li>
+                </div>
+                <div class="col mx-3">
+                  <li class="nav-item">
+                    <a  class="navcol nav-link" href="{{ url_for('history')}}">History</a>
+                  </li>
+                </div>
+                <div class="col mx-3">
+                  <li class="nav-item">
+                    <a  class="navcol nav-link" href="{{ url_for('que') }}" role="button" aria-expanded="false">
+                      Que
+                    </a>
+                  </li>
+                </div>
+              <!-- <li class="nav-item">
+                <a class="nav-link disabled">Disabled</a>
+              </li> -->
+            </ul>
+            </div>
+            <!-- <form class="d-flex" role="search">
+              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+              <button class="btn btn-outline-success" type="submit">Search</button>
+            </form> -->
+          </div>
+        </div>
+      </nav>
 
     <div class="container-md mt-5">
         <h2>   This is Que checking page  </h2>
