--- a/templates/que.html
+++ b/templates/que.html
@@ -73,6 +73,12 @@
             </form>
         </div>
     </div>
+    <!-- <footer class="bg-light text-center text-lg-start">
+        <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+          © 2022 Copyright owned by IOT:
+          <a class="text-dark" href="https://mdbootstrap.com/">MDBootstrap.com</a>
+        </div>
+      </footer> -->
 </body>
 
 
