--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,7 @@
 <html lang="en">
 
 <head>
+  
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/mainpage.css') }}">
@@ -46,12 +47,27 @@
               </li> -->
             </ul>
             </div>
-            <!-- <form class="d-flex" role="search">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Search</button>
-            </form> -->
           </div>
-        </div>
+
+          <div class="d-flex flex-row">
+
+                  <div style="visibility: {{id_visible}};">
+                    <button class="btn btn-outline-secondary bg-light px-5" type="submit"> 
+                      <i>                  
+                      {{ id }}
+                      </i> 
+                    </button>
+                  </div>
+                  <div style="visibility: {{visible}};">
+                    <button class="btn btn-outline-secondary bg-light px-5" type="submit"> 
+                    <img src="static/img/less_emoji.svg" />
+                    </button>
+                  </div>
+                
+            </button>
+          </div>
+
+
       </nav>
 
     <div id = "names" class = "container-fluid text-center mt-3 p-2">
@@ -73,24 +89,23 @@
             <img class="rounded logo" src="static/img/logo.png" width="50%"/>
         </div>
      </div>
-
+     <form method="post" action="/login/" name="login">
           <div class="row">
-            <form class="form-floating col" method="post">
-                  <input class="form-control form-control-md " type="text" placeholder="name" id = "user_name">
+            <div class="form-floating col">
+                  <input class="form-control form-control-md " type="text" placeholder="name" name = "user_name">
                   <label class="mx-2" for= "user_name"> Name </label>
-            </form>
+            </div>
 
-            <form class="form-floating  col" method="post">
-                  <input class="form-control form-control-md" type="text" placeholder="Id" id = "user_id">
+            <div class="form-floating  col">
+                  <input class="form-control form-control-md" type="text" placeholder="Id" name = "user_id">
                   <label class="mx-2" for = "user_id"> Id </label>
                   <br>
-            </form>
+            </div>
 
           </div>
             <div class="col-md">
-              <form method="post">
               <div class="form-floating">
-                <select class="form-select" id="floatingSelectGrid">
+                <select class="form-select" name ="years">
                   <option selected>Select your Year: </option>
                   <option value="1">1</option>
                   <option value="2">2</option>
@@ -100,13 +115,12 @@
 
                 <label for="floatingSelectGrid">Years</label>
               </div>
-            </form>
 
-            <form method="post" class="form-floating mt-3 pt-2">
-                  <input class="p-2 form-control form-control-sm" type="datetime-local" placeholder="time" id = "user_time">
+            <div class="form-floating mt-3 pt-2">
+                  <input class="p-2 form-control form-control-sm" type="datetime-local" placeholder="time" name = "user_time">
                   <label for = "user_time"> Expected Time </label>
                   <br>
-            </form>
+            </div>
 
             <input class="btn btn-outline-success m-3 p-3" type="submit">
         </form>
