--- a/static/css/mainpage.css
+++ b/static/css/mainpage.css
@@ -8,6 +8,15 @@ p{
     text-align: center;
 }
 
+.center-screen {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    min-height: 100vh;
+  }
+
 .sad{
     color: whitesmoke;
 }
