--- a/templates/index.html
+++ b/templates/index.html
@@ -60,7 +60,7 @@
                   </div>
                   <div style="visibility: {{visible}};">
                     <button class="btn btn-outline-secondary bg-light px-5" type="submit"> 
-                    <img src="static/img/less_emoji.svg" />
+                    <img src="{{url_for('static' , filename = 'img/less_emoji.svg')}}" />
                     </button>
                   </div>
                 
@@ -86,35 +86,23 @@
 
         <div class="container-sm col m-auto p-2">
           <p> created <span style="color:cyan "> By </span> </p>
-            <img class="rounded logo" src="static/img/logo.png" width="50%"/>
+            <img class="rounded" src="{{url_for('static' , filename = 'img/logo_real.png')}}" width="50%"/>
         </div>
      </div>
      <form method="post" action="/login/" name="login">
           <div class="row">
             <div class="form-floating col">
-                  <input class="form-control form-control-md " type="text" placeholder="name" name = "user_name">
-                  <label class="mx-2" for= "user_name"> Name </label>
+                  <input class="form-control form-control-md " readonly type="text" placeholder="name" name = "user_name">
+                  <label class="mx-2" for= "user_name"> {{user_name}} </label>
             </div>
 
             <div class="form-floating  col">
-                  <input class="form-control form-control-md" type="text" placeholder="Id" name = "user_id">
-                  <label class="mx-2" for = "user_id"> Id </label>
+                  <input class="form-control form-control-md" readonly type="text" placeholder="Id" name = "user_id">
+                  <label class="mx-2" for = "user_id"> {{user_id}} </label>
                   <br>
             </div>
 
           </div>
-            <div class="col-md">
-              <div class="form-floating">
-                <select class="form-select" name ="years">
-                  <option selected>Select your Year: </option>
-                  <option value="1">1</option>
-                  <option value="2">2</option>
-                  <option value="3">3</option>
-                  <option value="4">4</option>
-                </select>
-
-                <label for="floatingSelectGrid">Years</label>
-              </div>
 
             <div class="form-floating mt-3 pt-2">
                   <input class="p-2 form-control form-control-sm" type="datetime-local" placeholder="time" name = "user_time">
