--- a/templates/front.html
+++ b/templates/front.html
@@ -56,18 +56,26 @@
         </div>
       </nav>
 
-    <div class="container-lg center-screen">
+    <div class="container-lg center-screen text-center">
 
-        <h2> Welcome </h2>
+        <h2 class= "text-center font-weight-bold"> Welcome </h2>
+      <div class="container-md mt-3 rounded">
+          <form action="{{url_for('login_page')}}">
+             <button class="btn btn-primary px-5"> login </button>
+          </form>
+      </div>  
+
+      <div>
+        <form action = "{{url_for('registering')}}">
+          <button class="btn btn-secondary px-3 mt-3"> Register (First time use) </button>
+          </form>
+      </div>
 
         <div class="container-md mt-3 mb-3 rounded px-3">
-            <form action="{{url_for('main')}}">
-               <button class="btn btn-success"> Make a Reservation </button>
+            <form action="{{url_for('que')}}">
+               <button class="btn btn-success"> See Activities log (For admin) </button>
             </form>
         </div>  
-        <div>
-            <button class="btn btn-secondary px-3"> Register (First time use) </button>
-        </div>
     </div>
 
 </body>
