--- a/templates/login_error.html
+++ b/templates/login_error.html
@@ -1,3 +1,4 @@
+{% extends 'base.html' %}
 <!DOCTYPE html>
 
 <html lang="en">
@@ -10,54 +11,11 @@
     <title> Error </title>
 </head>
 
-
-<body class="text-center">
-    <nav class="navbar navbar-expand-lg">
-
-        <div class="container-fluid">
-          <!-- <a class="navbar-brand" href="#"> <img src="static/img/logo2.png" width="20%" class=""/></a> -->
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-
-            <div class="row">
-              <ul class="navbar-nav me-auto mb-5 mb-lg-0 ">
-                <div class="col mx-3">
-                  <li class="nav-item">
-                    <a class="navcol nav-link" aria-current="page" href="{{url_for('home')}}">Home</a>
-                  </li>
-                </div>
-                <div class="col mx-3">
-                  <li class="nav-item">
-                    <a  class="navcol nav-link" href="{{ url_for('history')}}">History</a>
-                  </li>
-                </div>
-                <div class="col mx-3">
-                  <li class="nav-item">
-                    <a  class="navcol nav-link" href="{{ url_for('que') }}" role="button" aria-expanded="false">
-                      Que
-                    </a>
-                  </li>
-                </div>
-              <!-- <li class="nav-item">
-                <a class="nav-link disabled">Disabled</a>
-              </li> -->
-            </ul>
-            </div>
-            <!-- <form class="d-flex" role="search">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Search</button>
-            </form> -->
-          </div>
-        </div>
-      </nav>
-
+{% block content %}
 
     <div    class="container-md mt-auto center-screen pb-5">
 
-        <h2> Error , You have to log in first </h2>
+        <h2> Error , You still not loged in or You have no permission to view this page</h2>
 
         <div class="container-sm">
             <form action = "{{url_for('login_page')}}">
@@ -69,8 +27,7 @@
 
     </div>
 
-
-</body>
+{% endblock %}
 
 
 </html>
