--- a/templates/test.html
+++ b/templates/test.html
@@ -1,45 +1,17 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
   <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/mainpage.css') }}">
-
+    {% block head %}
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+    <title>{% block title %}{% endblock %} - My Webpage</title>
+    {% endblock %}
   </head>
-
-
   <body>
-
-    <body>
-      <div class="container">
-          <div class="row">
-              <div class="col-lg-8  offset-lg-2">
-       
-                  <h2 class="mt-5">CAMERA APP by Hemanth Nag</h2>
-      <form method="post" action="{{ url_for('tasks') }}">
-      <input type="submit" value="Stop/Start" name="stop" />
-      <input type="submit" value="Capture" name="click"/>
-      <input type="submit" value="Grey" name="grey" />
-      <input type="submit" value="Negative" name="neg" />
-      <input type="submit" value="Face Only" name="face" />
-      <input type="submit" value="Start/Stop Recording" name="rec" />
-      </form>
-                  <img src="{{ url_for('video_feed') }}" height="80%">
-      <h3 style="font-family:courier;">Instructions:</h3>
-      <ol style="font-family:courier;">
-      <li>Stop/Start--Toggle between stop or start live streaming</li>
-      <li>Capture--Take still-shot and save in the 'shots' directory</li>
-      <li>Grey--Toggle between grayscale and RGB output</li>
-      <li>Negative--Toggle between negative and RGB output</li>
-      <li>Face Only--Shows just your face if present(Toggle on/off)</li>
-      <li>Start/Stop Recording--Toggle between starting and stopping video recording</li> </ol>
-              </div>
-          </div>
-      </div>
-      </body>
-    </body>
-
-
+    <div id="content">{% block content %}{% endblock %}</div>
+    <div id="footer">
+      {% block footer %}
+      &copy; Copyright 2010 by <a href="http://domain.invalid/">you</a>.
+      {% endblock %}
+    </div>
+  </body>
 </html>
-Footer
-© 2022 GitHub, Inc.
