--- a/templates/front.html
+++ b/templates/front.html
@@ -26,8 +26,8 @@
       </div>
 
         <div class="container-md mt-3 mb-3 rounded px-3">
-            <form action="{{url_for('que')}}">
-               <button class="btn btn-success"> See Activities log (For admin) </button>
+            <form action="{{url_for('admin_page')}}">
+               <button class="btn btn-success"> See Activities log (For admin_page) </button>
             </form>
         </div>  
     </div>
