--- a/templates/login.html
+++ b/templates/login.html
@@ -29,7 +29,7 @@
           </div>
 
           <div class="form-floating mt-5 mb-3">
-                <input class="form-control form-control-md" type="text" placeholder="99/99 example" name = "user_password">
+                <input class="form-control form-control-md" type="password" placeholder="99/99 example" name = "user_password">
                 <label class="mx-2" for = "user_id"> Password </label>
                 <br>
           </div>
