--- a/templates/Dashboard.html
+++ b/templates/Dashboard.html
@@ -16,11 +16,12 @@
       {% endfor %}
   </div>
 
+  <h2> Your information </h2>
+
     <div class="container-lg">
       <table class="table">
         <thead>
           <tr>
-            <th scope="col">#</th>
             <th scope="col">User Name</th>
             <th scope="col">House number</th>
             <th scope="col">Email</th>
@@ -28,28 +29,46 @@
         </thead>
         <tbody>
           <tr>
-            <th scope="row">1</th>
             <td>{{personal[0]}}</td>
             <td>{{personal[1]}}</td>
             <td>{{personal[3]}}</td>
           </tr>
-          <tr>
-            <th scope="row">2</th>
-            <td></td>
-            <td></td>
-            <td></td>
-          </tr>
-          <tr>
-            <th scope="row">3</th>
-            <td></td>
-            <td></td>
-            <td></td>
-          </tr>
+
         </tbody>
       </table>
 
 
     </div>
+
+    <div class="container-lg">
+      <table class="table">
+        <thead>
+          <tr>
+            <th scope="col">User Name</th>
+            <th scope="col">User License Plates</th>
+          </tr>
+        </thead>
+        <tbody>
+
+          {%for info in _plates%}
+
+          <tr>
+            {%for plate in info%}
+
+            <td>{{plate}}</td>
+
+            {%endfor%}
+          </tr>
+        
+          {%endfor%}
+          
+        </tbody>
+      </table>
+
+
+    </div>
+
+
 
     <div class="row">
         
@@ -66,9 +85,32 @@
       </div>
 
         <div class="col"> 
-            <form action = '/que/' method="post" name = "que">       
-                <button name = "que" type="submit" class="btn btn-secondary"> &#x2771; Que </button>
+            <form action = '/admin_page/' method="post" name = "admin_page">       
+                <button name = "admin_page" type="submit" class="btn btn-secondary"> &#x2771; Admin </button>
             </form>
         </div>
+
+
+
+      <div class="container-md">
+         
+
+          <img src="{{url_for('static' , filename = 'img/plate.jpg')}}" width="15%"/>
+          <p> Example of License Plate (Input) </p>
+        </div>
+    
+      <div class="text-center">
+        <form action = '/add_plate/' method="post" name = "add_plate">
+
+          <div >
+            <input type="text" class="" id="add_plate" placeholder="License Plate" name = "add_plate">
+          </div>
+          <div >
+            <button type="submit" class="btn btn-primary mt-3">Add</button>
+          </div>
+        </form>
+      </div>
+    
+
     </div>
 {% endblock %}
