--- a/templates/base.html
+++ b/templates/base.html
@@ -31,15 +31,11 @@
                 <a class="navcol nav-link" aria-current="page" href="{{url_for('home')}}">Home</a>
               </li>
             </div>
+      
             <div class="col mx-3">
               <li class="nav-item">
-                <a  class="navcol nav-link" href="{{ url_for('history')}}">History</a>
-              </li>
-            </div>
-            <div class="col mx-3">
-              <li class="nav-item">
-                <a  class="navcol nav-link" href="{{ url_for('que') }}" role="button" aria-expanded="false">
-                  Que
+                <a  class="navcol nav-link" href="{{ url_for('admin_page') }}" role="button" aria-expanded="false">
+                  Admin
                 </a>
               </li>
             </div>
@@ -58,6 +54,11 @@
 {% endblock %}
 
 
+<div class="container-md">
+{%block footer%}
+
+{%endblock%}
+</div>
 </body>
 
 
