--- a/templates/Dashboard.html
+++ b/templates/Dashboard.html
@@ -44,6 +44,7 @@
       <table class="table">
         <thead>
           <tr>
+            <th scope="col">Time added</th>
             <th scope="col">User Name</th>
             <th scope="col">User License Plates</th>
           </tr>
