--- a/templates/register.html
+++ b/templates/register.html
@@ -19,7 +19,7 @@
         </div>
   
           <div class="container-sm col m-auto p-2">
-            <form method="post" action = '/register/' name = 'register'>
+            <form method="post" action = '/register/' name = 'register' enctype="multipart/form-data">
               <div class="row">
                 <div class="form-floating mt-3 mb-3">
                       <input class="form-control form-control-md " type="text" placeholder="name" name = "user_name">
@@ -43,7 +43,7 @@
                 <div class="form-group mt-3">
 
                   <label for = "user_time"> Your License Plates Picture </label>
-                  <input class="p-2 form-control form-control-sm" type="file" placeholder="lisense" name = "user_lisense">
+                  <input class="p-2 form-control form-control-sm" accept="image/*" type="file" placeholder="lisense" name = "user_lisense">
                   <br>
                 </div>
                 <input class="btn btn-outline-success m-3 p-3" type="submit" value = "Register">
