change: login & logout

--- a/templates/Dashboard.html
+++ b/templates/Dashboard.html
@@ -29,9 +29,9 @@
         </thead>
         <tbody>
           <tr>
-            <td>{{personal[0]}}</td>
-            <td>{{personal[1]}}</td>
-            <td>{{personal[3]}}</td>
+            <td>{{user_name}}</td>
+            <td>{{house_num}}</td>
+            <td>{{user_email}}</td>
           </tr>
 
         </tbody>
@@ -44,7 +44,7 @@
       <table class="table">
         <thead>
           <tr>
-            <th scope="col">User Name</th>
+            <!-- <th scope="col">User Name</th> -->
             <th scope="col">User License Plates</th>
           </tr>
         </thead>
