--- a/templates/register.html
+++ b/templates/register.html
@@ -32,7 +32,7 @@
             </div>
     
                 <div class="form-floating mt-3 mb-3">
-                      <input class="form-control form-control-md" type="text" placeholder="99/99 example" name = "user_id">
+                      <input class="form-control form-control-md" type="text" placeholder="99/99 example" name = "house_num">
                       <label class="mx-2" for = "user_id"> Your House Number </label>
                       <br>
                 </div>
