debug: all user func

--- a/templates/admin_page.html
+++ b/templates/admin_page.html
@@ -43,8 +43,8 @@
         <table class="table">
           <thead>
             <tr>
-              <th scope="col">User Name</th>
-              <th scope="col">User License Plates</th>
+              <!-- <th scope="col">User Name</th>
+              <th scope="col">User License Plates</th> -->
             </tr>
           </thead>
           <tbody>
