--- a/templates/Dashboard.html
+++ b/templates/Dashboard.html
@@ -60,8 +60,8 @@
             {%endfor%}
             <td>
             <form action = '/delete_plate/' method="post" name = "delete_plate">    
-              <p>{{info[1]}}</p>   
-              <button name = "delete_plate" type="submit" class="btn btn-outline-danger" value="{{info[1]}}"> &#x2770; Delete </button>
+              <!-- <p>{{info[0]}}</p>    -->
+              <button name = "delete_plate" type="submit" class="btn btn-outline-danger" value="{{info[0]}}"> &#x2770; Delete </button>
           </form>
         </td>
           </tr>
