admin func left

--- a/templates/Dashboard.html
+++ b/templates/Dashboard.html
@@ -45,7 +45,7 @@
         <thead>
           <tr>
             <!-- <th scope="col">User Name</th> -->
-            <th scope="col">User License Plates</th>
+            <th>User License Plates</th>
           </tr>
         </thead>
         <tbody>
