change: admin_edit

--- a/templates/admin_edit.html
+++ b/templates/admin_edit.html
@@ -2,34 +2,57 @@
 
 
 {% block content %}
+<form method="POST" , action = "/edit/" , name = "admin_form" , id = "admin_form">
 <div class="container-lg mt-5">
     <div class="input-group mb-3">
-        <button class="btn btn-outline-danger" type="button" id="button-addon1">Delete Account</button>
+        <button class="btn btn-outline-danger" type="submit" id="button-delete">Delete Account</button>
 
 
-        <select class="form-select" aria-label="Default select example">
+        <select class="form-select" aria-label="Default select example" name = "button-name" id = "button-name">
             <option selected>Select Name</option>
             {%for data in personal%}
    
-            <option value="1">{{data[1]}}</option>
+            <option value="{{data[1]}}">{{data[1]}}</option>
    
             {%endfor%}
 
           </select>
       </div>
       
-      <div class="input-group mb-3">
-        <input type="text" class="form-control" placeholder="Recipient's username" aria-label="Recipient's username" aria-describedby="button-addon2">
-        <button class="btn btn-outline-primary" type="button" id="button-addon2">Add Name</button>
-      </div>
       
       <div class="input-group mb-3">
-        <button class="btn btn-outline-secondary" type="button">Add License Plate</button>
-        <input type="text" class="form-control" placeholder="" aria-label="Example text with two button addons">
+        <input name= "add_name" id= "add_name" type="text" class="form-control" placeholder="Recipient's username" aria-label="Recipient's username" aria-describedby="button-addon2">
+        <button class="btn btn-outline-primary" type="submit" id="button-addon2">Add Name</button>
       </div>
+
+      <div class="row">
+      
+        <div class="input-group mb-3 col">
+          <button class="btn btn-outline-secondary" type="submit">Add License Plate</button>
+          <input name = "button_license" id = "button_license" type="text" class="form-control" placeholder="" aria-label="Example text with two button addons">
+        </div>
+
+        <div class="input-group mb-3 col">
+
+
+          <select class="form-select" aria-label="Default select example" name = "button-name-license" id = "button-name-license">
+              <option selected>Select Name</option>
+              {%for data in personal%}
+    
+              <option value="{{data[1]}}">{{data[1]}}</option>
+    
+              {%endfor%}
+
+            </select>
+            <label class="mx-3" id="button-delete">Select Account name</label>
+        </div>
+
+      </div>
+
+
       
       <div class="input-group">
-        <select class="form-select" aria-label="Default select example">
+        <select class="form-select" aria-label="Default select example" name = "plate_delete" id = "plate_delete">
             <option selected>Select Plates</option>
             {%for data in _plates%}
    
@@ -38,7 +61,8 @@
             {%endfor%}
 
           </select>
-        <button class="btn btn-outline-danger" type="button">Delete License Plate</button>
+        <button class="btn btn-outline-danger" type="submit">Delete License Plate</button>
       </div>
 </div>
+</form>
 {% endblock %}
