--- a/templates/history.html
+++ b/templates/history.html
@@ -1,57 +1,7 @@
-<!DOCTYPE html>
-
-<html lang="en">
+{% extends 'base.html' %}
 
 
-<head>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-  <link rel="stylesheet" href="{{ url_for('static', filename='css/mainpage.css') }}">
-</head>
-
-
-
-<body>
-  
-  <nav class="navbar navbar-expand-lg">
-
-    <div class="container-fluid">
-      <!-- <a class="navbar-brand" href="#"> <img src="static/img/logo2.png" width="20%" class=""/></a> -->
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" 
-      aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-
-        <div class="row">
-          <ul class="navbar-nav me-auto mb-5 mb-lg-0 ">
-            <div class="col mx-3">
-              <li class="nav-item">
-                <a class="navcol nav-link" aria-current="page" href="/">Home</a>
-              </li>
-            </div>
-      
-            <div class="col mx-3">
-              <li class="nav-item">
-                <a  class="navcol nav-link" href="/" role="button" aria-expanded="false">
-                  Admin
-                </a>
-              </li>
-            </div>
-          <!-- <li class="nav-item">
-            <a class="nav-link disabled">Disabled</a>
-          </li> -->
-        </ul>
-        </div>
-      </div>
-
-
-
-  </nav>
-
-
-
+{% block content %}
   <div class="container-lg">
     <table class="table">
       <thead>
@@ -90,8 +40,4 @@
         
       
   </div>
-
-</body>
-
-
-</html>
+  {%endblock%}
