--- a/templates/base.html
+++ b/templates/base.html
@@ -39,6 +39,14 @@
                 </a>
               </li>
             </div>
+
+            <div class="col mx-3">
+              <li class="nav-item">
+                <a  class="navcol nav-link" href="{{ url_for('history') }}" role="button" aria-expanded="false">
+                  History
+                </a>
+              </li>
+            </div>
           <!-- <li class="nav-item">
             <a class="nav-link disabled">Disabled</a>
           </li> -->
