--- a/templates/admin_page.html
+++ b/templates/admin_page.html
@@ -93,6 +93,11 @@
                 <button name = "history" type="submit" class="btn btn-secondary"> &#x2771; history </button>
             </form>
         </div>
+        <div class="col"> 
+          <form action = '/gate_history/' method="post" name = "gate_history">       
+              <button name = "gate_history" type="submit" class="btn btn-secondary"> &#x2771; gate history </button>
+          </form>
+      </div>
     </div>
 </div>
 {%endblock%}
