--- a/templates/base.html
+++ b/templates/base.html
@@ -47,6 +47,13 @@
                 </a>
               </li>
             </div>
+            <div class="col mx-3">
+              <li class="nav-item">
+                <a  class="navcol nav-link" href="{{ url_for('gate_history') }}" role="button" aria-expanded="false">
+                  Gate_History
+                </a>
+              </li>
+            </div>
           <!-- <li class="nav-item">
             <a class="nav-link disabled">Disabled</a>
           </li> -->
