--- a/templates/gate_history.html
+++ b/templates/gate_history.html
@@ -6,9 +6,9 @@
     <table class="table">
       <thead>
         <tr>
-          <th scope="col">#</th>
           <th scope="col">User Name</th>
-          <th scope="col">action</th>
+          <th scope="col">Car License</th>
+          <th scope="col">Action</th>
           <th scope="col">Time-stamp</th>
         
         </tr>
@@ -17,7 +17,7 @@
         <tr>
 
             
-          {%for data in logger%}
+          {%for data in gate_log%}
           <tr>
 
               
