--- a/templates/register.html
+++ b/templates/register.html
@@ -40,13 +40,7 @@
                   <label for="exampleFormControlInput1">Email address</label>
                   <input type="email" class="form-control" placeholder="name@example.com" name = "user_email">
                 </div>
-                <div class="form-group mt-3">
-
-                  <label for = "user_time"> Your License Plates Picture </label>
-                  <input class="p-2 form-control form-control-sm" accept="image/*" type="file" placeholder="lisense" name = "user_lisense">
-                  <br>
-                </div>
-                <input class="btn btn-outline-success m-3 p-3" type="submit" value = "Register">
+                <input class="btn btn-outline-success btn-sm my-5 p-3" type="submit" value = "Register">
               </form>
             
   
