--- a/templates/front.html
+++ b/templates/front.html
@@ -12,7 +12,7 @@
 
     <div class="container-lg center-screen text-center pb-5">
 
-        <h2 class= "text-center font-weight-bold"> Welcome </h2>
+        <h2 class= "text-center font-weight-bold"> Welcome to Registering / Managing system  </h2>
       <div class="container-md mt-3 rounded">
           <form action="{{url_for('login_page')}}">
              <button class="btn btn-primary px-5"> login </button>
